--- a/css/styles.css
+++ b/css/styles.css
@@ -517,6 +517,7 @@ img {
   position: fixed;
   top: 0;
   left: 0;
+  transition: color 250ms linear;
 }
 .modal {
   max-width: 408px;
@@ -540,4 +541,13 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   padding: 8px;
+  cursor: pointer;
+  transition: color 250ms linear;
+}
+.modal-close:hover,
+.modal-close:focus {
+  background: #404bbf;
+  border-radius: 4px;
+  border-radius: 50%;
+  fill: rgba(255, 255, 255, 1);
 }
